boxes align bug

--- a/css/default.css
+++ b/css/default.css
@@ -81,6 +81,10 @@ p {
     gap: 32px;
 }
 
+.gap-16 {
+    gap: 16px;
+}
+
 .side-width {
     width: 320px;
 }
@@ -1700,6 +1704,10 @@ input#csds-button {
 }
 
 @media (max-width: 767px) {
+    .flex-col-mobile {
+        flex-direction: column;
+    }
+
     .logoHeader {
         width: auto;
     }
